feat(product): complete backend integration for Cloudinary product image upload